--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,11 +13,22 @@ spring:
 
   application:    name: person-service
 
-  jpa:    show-sql: true
-    hibernate:      ddl-auto: validate
+  datasource:
+    name: MABPEOPLE    initialization-mode: embedded
+    platform: h2
+    url: jdbc:h2:mem:MABPEOPLE
+    
+    username: sa
+    password: 
+    driver-class-name: org.h2.Driver    
+    
+  jpa:
+    show-sql: true
+    hibernate:      ddl-auto: validate #create
 
-  h2:    console:      enabled: true
-      path: "/h2-console" 
+  h2:
+    console:      enabled: true
+      path: "/h2" 
       
 
 logging:
